# Ares

./: .gitignore  .gitmodules  .htaccess  app.html  ares.sql  index.html  login.html  package-lock.json  phobos.sql  register.html
css/: stylesheet.css
doc/: proposal.tex
js/: common.js  login.js  main.js
php/: common.php  composer.json  connect.php  delete.php  fetch.php  insert.php  login.php  logout.php  messages.php  register.php  retrieve.php  token.php
wss/: CMakeLists.txt  main.go
wss/src/: main.cpp
